--- a/.vela.yml
+++ b/.vela.yml
@@ -1,17 +1,17 @@
 version: "1.0"
 
 steps:
-  - name: build image dry run
-    image: target/vela-kaniko:v0.8.0
-    parameters:
-      dry_run: true
-      registry: docker.internal.mapes.info
-      repo: asphyxia-core
-      tags:
-        - dry_run
-    ruleset:
-        event: [push, pull_request]
-        branch: [main]
+  # - name: build image dry run
+  #   image: target/vela-kaniko:v0.8.0
+  #   parameters:
+  #     dry_run: true
+  #     registry: docker.internal.mapes.info
+  #     repo: asphyxia-core
+  #     tags:
+  #       - dry_run
+  #   ruleset:
+  #       event: [push, pull_request]
+  #       branch: [main]
 
   - name: build image
     image: target/vela-kaniko:v0.8.0
@@ -26,7 +26,8 @@ steps:
       registry: docker.internal.mapes.info
       repo: asphyxia-core
       tags:
-        - "${VELA_BUILD_TAG:##v}"
+        - dry_run
+        # - "${VELA_BUILD_TAG:##v}"
     # ruleset:
       # event: tag
   
