Enable dry_run for tag build since vela-kaniko does not support http registries

--- a/.vela.yml
+++ b/.vela.yml
@@ -5,7 +5,6 @@ steps:
     image: target/vela-kaniko:v0.8.0
     parameters:
       dry_run: true
-      registry: docker.internal.mapes.info
       repo: asphyxia-core
       tags:
         - dry_run
@@ -21,6 +20,12 @@ steps:
       - source: docker_password
         target: parameter_password
     parameters:
+      dry_run: true
+      # TODO Vela update Kaniko to support pushing to insecure registries
+      #   https://github.com/go-vela/community/issues/470
+      # insecure: true
+      # insecure_registries:
+      #   - docker.internal.mapes.info
       registry: docker.internal.mapes.info
       repo: docker.internal.mapes.info/asphyxia-core
       tags:
