--- a/.vela.yml
+++ b/.vela.yml
@@ -2,10 +2,11 @@ version: "1.0"
 
 steps:
   - name: build image dry run
-    image: target/vela-kaniko:v0.8.0
+    image: target/vela-kaniko:latest
     parameters:
       dry_run: true
       repo: docker.internal.mapes.info/asphyxia-docker
+      mirror: docker.mapes.info
       tags:
         - dry_run
     ruleset:
@@ -25,7 +26,7 @@ steps:
         - docker.internal.mapes.info
       registry: docker.internal.mapes.info
       repo: docker.internal.mapes.info/asphyxia-docker
-      # mirror: docker.mapes.info
+      mirror: docker.mapes.info
       tags:
         - "${VELA_BUILD_TAG:##v}"
     ruleset:
