--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,11 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:best-practices",
-    "config:recommended"
-  ]
+    "config:recommended",
+    ":automergeMinor",
+    ":automergeLinters"
+  ],
+  "digest": {
+    "automerge": true
+  },
 }
